[package]
name = "rinha-03"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
redis = { version = "0.32.3", git = "https://github.com/redis-rs/redis-rs.git", features = ["tokio-comp"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["serde", "formatting"] }
async-trait = "0.1.88"